crates/swc-react-native-worklets/tests/snapshots/transform_test__worklet_class_marker_on_method_with_reserved_keyword_name.snap
---
source: crates/swc-react-native-worklets/tests/transform_test.rs
expression: out
---
const _worklet_14560965332722_init_data = {
    code: "(function throw_SampleTs1(vx, vy) {\n    this.vx += vx;\n})",
    location: "Sample.ts"
};
const _worklet_10598354538978_init_data = {
    code: '(function Ball__classFactory_SampleTs2() {\n    const { _worklet_14560965332722_init_data } = this.__closure;\n    const Ball__classFactory_SampleTs2 = this._recur;\n    var Ball = function Ball() {};\n    Ball.prototype.throw = function throw_SampleTs1Factory({ _worklet_14560965332722_init_data }) {\n        const _e = [\n            new global.Error(),\n            1,\n            -27\n        ];\n        const _throw = function _throw(vx, vy) {\n            this.vx += vx;\n        };\n        _throw.__closure = {};\n        _throw.__workletHash = 14560965332722;\n        _throw.__pluginVersion = "test";\n        _throw.__initData = _worklet_14560965332722_init_data;\n        _throw.__stackDetails = _e;\n        return _throw;\n    }({\n        _worklet_14560965332722_init_data: _worklet_14560965332722_init_data\n    });\n    Ball.Ball__classFactory = Ball__classFactory_SampleTs2;\n    return Ball;\n})',
    location: "Sample.ts"
};
const Ball__classFactory = (function Ball__classFactory_SampleTs2Factory({ _worklet_10598354538978_init_data, _worklet_14560965332722_init_data }) {
    const _e = [
        new global.Error(),
        1,
        -27
    ];
    const Ball__classFactory = function Ball__classFactory() {
        "use no memo";
        var Ball = function Ball() {};
        Ball.prototype.throw = (function throw_SampleTs1Factory({ _worklet_14560965332722_init_data }) {
            const _e = [
                new global.Error(),
                1,
                -27
            ];
            const _throw = function _throw(vx, vy) {
                "use no memo";
                this.vx += vx;
            };
            _throw.__closure = {};
            _throw.__workletHash = 14560965332722;
            _throw.__pluginVersion = "test";
            _throw.__initData = _worklet_14560965332722_init_data;
            _throw.__stackDetails = _e;
            return _throw;
        })({
            _worklet_14560965332722_init_data
        });
        Ball.Ball__classFactory = Ball__classFactory;
        return Ball;
    };
    Ball__classFactory.__closure = {
        _worklet_14560965332722_init_data
    };
    Ball__classFactory.__workletHash = 10598354538978;
    Ball__classFactory.__pluginVersion = "test";
    Ball__classFactory.__initData = _worklet_10598354538978_init_data;
    Ball__classFactory.__stackDetails = _e;
    return Ball__classFactory;
})({
    _worklet_10598354538978_init_data,
    _worklet_14560965332722_init_data: _worklet_14560965332722_init_data
});
const Ball = Ball__classFactory();
