crates/swc-react-native-worklets/tests/snapshots/transform_test__worklet_class_marker_without_methods_still_wraps.snap
---
source: crates/swc-react-native-worklets/tests/transform_test.rs
expression: out
---
const _worklet_391121252862_init_data = {
    code: "(function Empty__classFactory_SampleTs1() {\n    const Empty__classFactory_SampleTs1 = this._recur;\n    var Empty = function Empty() {};\n    Empty.Empty__classFactory = Empty__classFactory_SampleTs1;\n    return Empty;\n})",
    location: "Sample.ts"
};
const Empty__classFactory = (function Empty__classFactory_SampleTs1Factory({ _worklet_391121252862_init_data }) {
    const _e = [
        new global.Error(),
        1,
        -27
    ];
    const Empty__classFactory = function Empty__classFactory() {
        "use no memo";
        var Empty = function Empty() {};
        Empty.Empty__classFactory = Empty__classFactory;
        return Empty;
    };
    Empty__classFactory.__closure = {};
    Empty__classFactory.__workletHash = 391121252862;
    Empty__classFactory.__pluginVersion = "test";
    Empty__classFactory.__initData = _worklet_391121252862_init_data;
    Empty__classFactory.__stackDetails = _e;
    return Empty__classFactory;
})({
    _worklet_391121252862_init_data
});
const Empty = Empty__classFactory();
